# goose_communication

./: .gitignore  README.md
goose_comm/: CMakeLists.txt  package.xml
goose_comm/include/goose_comm/: UTM.h  goose_comm.h
goose_comm/launch/: goose_comm.launch
goose_comm/lib/: UTM.cpp
goose_comm/osm/: kaist_new.osm  usrg_map.osm
goose_comm/src/: goose_comm.cpp  goose_comm_node.cpp  sensor_data.cpp
goose_comm_msgs/: CMakeLists.txt  package.xml
goose_comm_msgs/msg/: Node.msg  OsmParcer.msg  Way.msg  node_link.msg  sensor_data.msg
