<package>
  <name>goose_comm_msgs</name>
  <version>1.0.1</version>
  <description>
    goose_comm_msgs definition
  </description>
  <maintainer email="lee.dk@kaist.ac.kr">DaegyuLee</maintainer>
  <author>DaegyuLee</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
